testsuite/tests/linear/should_fail/LinearViewPattern.stderr

LinearViewPattern.hs:11:4: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from a non-linear pattern
    • In the pattern: not -> True
      In an equation for ‘f’: f (not -> True) = True
